hard-code extra 3 quesitons for hotfix demo videl

--- a/envExample/env.local.example
+++ b/envExample/env.local.example
@@ -7,8 +7,8 @@ OPENAI_API_KEY=sk-your-openai-api-key-here
 OPENAI_MODEL=gpt-4o-mini
 
 # API Base URLs (local uses prod URL)
-DEV_API_BASE_URL=https://api0.dev.nyle.ai/math/v1
-PROD_API_BASE_URL=https://api.nyle.ai/math/v1
+DEV_BASE_URL=https://api0.dev.nyle.ai
+PROD_BASE_URL=https://api.nyle.ai
 
 # LangSmith (optional - disabled for local)
 LANGCHAIN_TRACING_V2=false
