--- a/envExample/env.local.example
+++ b/envExample/env.local.example
@@ -1,9 +1,9 @@
 # Copy this file to .env.local
 # Environment
-ENVIRONMENT=local
+ENVIRONMENT=dev
 
 # OpenAI
-OPENAI_API_KEY=sk-your-openai-api-key-here
+OPENAI_API_KEY=sk-proj-your-openai-api-key-here
 OPENAI_MODEL=gpt-4o-mini
 
 # API Base URLs (local uses prod URL)
@@ -11,7 +11,6 @@ DEV_BASE_URL=https://api0.dev.nyle.ai
 PROD_BASE_URL=https://api.nyle.ai
 
 # LangSmith (optional - disabled for local)
-LANGCHAIN_TRACING_V2=false
+LANGCHAIN_TRACING_V2=true
 LANGCHAIN_PROJECT=nyle-chatbot-local
-LANGCHAIN_API_KEY=
-
+LANGCHAIN_API_KEY=lsv2_pt_your-langchain-api-key-here
